--- a/src/estilos/style.css
+++ b/src/estilos/style.css
@@ -155,6 +155,9 @@ h1,h2,h3,h4,h5,h6 {
   --bs-breadcrumb-divider-color: #fff;
   --bs-breadcrumb-item-active-color: var(--bs-primary);
 }
+.imagen{
+  width: 50%;
+}
 .dropdown-menu {
   --bs-dropdown-link-active-bg: var(--bs-primary);
 }
@@ -306,11 +309,28 @@ h1,h2,h3,h4,h5,h6 {
   margin: 20px 0;
   transition: box-shadow 0.3s ease-out, transform 0.3s ease-out;
 }
+
 .category-carousel .category-item:hover {
   transform: translate3d(0,-10px,0);
   box-shadow: 0px 21px 44px rgba(0, 0, 0, 0.08);
 }
-.category-carousel .category-item .category-title {
+
+.category-carousel .nav-link {
+  display: flex;
+  flex-direction: column; /* Asegura que la imagen y el título estén en columna */
+  align-items: center; /* Centra el contenido */
+  text-decoration: none; /* Elimina subrayado */
+}
+
+.category-carousel .nav-link img {
+  width: 120px; /* Ajusta según lo que necesites */
+  height: 120px; /* Ajusta según lo que necesites */
+  border-radius: 50%; /* Mantiene la forma redonda */
+  object-fit: cover; /* Asegura que la imagen se ajuste bien */
+}
+
+
+.category-carousel .category-title {
   font-weight: 600;
   font-size: 20px;
   line-height: 27px;
@@ -319,6 +339,7 @@ h1,h2,h3,h4,h5,h6 {
   color: #222222;
   margin-top: 20px;
 }
+
 
 /* brand carousel */
 .brand-carousel .brand-item {
@@ -605,6 +626,10 @@ a.btn-link.text-light:after {
 /* ============ desktop view .end// ============ */
 
 
+.caja{
+  width: 20rem;
+}
+
 /* ============ mobile view ============ */
 @media(max-width: 991px){
 	.navbar.fixed-top .navbar-collapse, .navbar.sticky-top .navbar-collapse{
@@ -612,5 +637,22 @@ a.btn-link.text-light:after {
 	    max-height: 90vh;
 	    margin-top:10px;
 	}
+  .responsivo{
+    display: flex;
+    flex-direction: column;
+  }
+  .boton-responsivo{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+  }
+  .boton{
+    width: 20rem;
+  }
+  .imagen{
+    width: 100%;
+  }
 }
+
 /* ============ mobile view .end// ============ */
